# asciinema-scene

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
asciinema_scene/: sciine.py
asciinema_scene/scenelib/: constants.py  scene.py  scene_content.py  utils.py
docs/: index.html
src/asciinema_scene/: sciine.py
src/asciinema_scene/scenelib/: constants.py  frame.py  scene.py  utils.py
tests/: contents.py  test_cli.py  test_copy.py  test_cut.py  test_frame.py  test_include.py  test_insert.py  test_quantize.py  test_scene_content.py  test_select.py  test_speed.py  test_text_delete.py  test_text_merge.py  test_text_replace.py
tests/files/: back.cast  short.cast
